# MCP-studies

./: error_handling.py
MCP LangGraph consume resource/client/: chat_message.py  graph.py  main.py  pyproject.toml  resource_agent.py
MCP LangGraph consume resource/client/controller/: chat_controller.py
MCP LangGraph consume resource/server/tools/: database_tools.py
MCP LangGraph consume resource/server/utils/: file_reader.py
MCP ask for parameters/client/: client.py  pyproject.toml
MCP ask for parameters/server/: main.py
MCP ask for parameters/simple_server/tools/: database_tools.py
MCP basic/simple_server/: main.py
MCP basic/simple_server/tools/: csv_tools.py
MCP basic/simple_server/utils/: file_reader.py
MCP error handling/client/: client.py  main.py
MCP error handling/server/: server.py
MCP error handling/server/data/: sample.parquet
MCP error handling/server/tools/: parquet_tools.py
MCP error handling/simple_groq_client/: client.py  pyproject.toml
MCP error handling/simple_server/: pyproject.toml
MCP error handling/simple_server/tools/: csv_tools.py
MCP with LangGraph - Peek applicaiton/client/: exception_handler.py  graph.py  pyproject.toml
MCP with LangGraph - Peek applicaiton/server/: main.py  pyproject.toml
MCP with LangGraph - real state/client/: state.py
MCP with LangGraph - real state/server/: server.py
MCP with LangGraph/client/: .env.example  attendance_agent.py  chat_message.py  exception_handler.py  main.py  message_role.py  state.py
MCP with LangGraph/server/: main.py
(+17 files in other folders)
